# youBet

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/decisions/: 001-initial-architecture.md
docs/research/: README.md  betting-market-efficiency.md  calibration.md  data-sources.md  feature-engineering.md  methodologies.md  multi-market-plan.md
docs/runbooks/: new-workflow.md
scripts/: keep_awake.py  keep_awake_marker.py
src/youbet/: __init__.py
tests/stock/: test_backtester_survivorship.py  test_benchmark_spy_e2e.py  test_composites.py  test_cost_buckets.py  test_delisting_snap.py  test_edgar_pit.py  test_evaluate_gate_estimand.py  test_fundamentals_pit.py  test_ml_ranker.py  test_momentum_nan_handling.py  test_phase7_strategies.py  test_regime.py  test_te_empirical.py  test_universe_as_of.py  test_universe_build.py
tests/test_core/: test_bankroll.py  test_elo.py
tests/test_etf/: test_costs.py  test_pit.py  test_pit_features.py  test_risk.py  test_stats.py  test_transforms.py
workflows/: README.md
workflows/_template/: config.yaml
workflows/cagr-max/: CLAUDE.md  config.yaml
workflows/commodity/: CLAUDE.md  config.yaml
workflows/etf/: CLAUDE.md
workflows/etflab-max/: CLAUDE.md  config.yaml
workflows/factor-timing/: CLAUDE.md  config.yaml
workflows/international-etf/: CLAUDE.md  config.yaml
workflows/macro-exploratory/: config.yaml
workflows/mlb/: CLAUDE.md  README.md  config.yaml
workflows/mma/: CLAUDE.md  README.md  config.yaml
workflows/nba/: CLAUDE.md  README.md  config.yaml
workflows/pga/: CLAUDE.md  (+2 more)
(+403 files in other folders)
